fix overflow background

--- a/src/components/Frame66.module.css
+++ b/src/components/Frame66.module.css
@@ -108,7 +108,7 @@ text-align: center;
 
 .bgContainer{
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: auto;
     z-index: 1;
     overflow: hidden;
