--- a/src/components/Frame72.module.css
+++ b/src/components/Frame72.module.css
@@ -11,7 +11,7 @@
 
 .bgContainer{
     position: absolute;
-    width: 100vw;
+    width: 100%;
     height: auto;
     z-index: 1;
     overflow: hidden;
